v3.xx 2015/xx/xx
~~~~~~~~~~~~~~~~
New: Exercise SSLE.C53, a 2x2 system from The Economist
New: Exercise O.T31, Gram-Schmidt twice (suggested by Chili Johnson)
Change: Annotated Acronyms, Chapter R, removed three obsolete items
Change: Exercise PD.M50, deleted, now obsolete
Edit: Consistent titles on Sage nonsingular matrix series (Daniel York)
Edit: Examples CROB4, CROB3, had old-style inner products (Chris Thron)
Edit: Streamline half of proof of Theorem NPNT
Edit: Example FS1, clarified submatrices of extended echelon form (Chili Johnson)
Edit: Definition EEF, matrix M needed to be typeset as math (Jordan Fonseca)
Edit: Example FSAG, clarified two vectors are from spanning set (Chili Johnson)
Edit: Theorem SMEZV, additional justification in proof
Edit: Theorem SSLD, justifications in alternate proof (Chili Johnson)
Edit: Theorem AISM, added missing justification in proof (Jonathan Adams)
Edit: Improved justifications for eigenstuff proofs
Edit: Definition ELEM, fixed scalar multiple elementary matrix (Lukas Edman)
Edit: Clarify Solution ILT.C33 (Daniel York)
Edit: Consistent notation in Subsection VR (Daniel York)
Edit: Commas in matrix space notation (Kelsey Reed)
Typo: Example NSS, sentence needs "which" to join clauses (Chili Johnson)
Typo: Example LLDS, set is R, not B (Daniel York)
Typo: Solution LDS.C52, set is T, not S (Molly Hazlehurst)
Typo: Annotated Acronyms, Chapter M, Theorem CSCS, question mark, missing "h" (Kelsey Reed)
Typo: Example DSM22, subspace is Z, not V (Kelsey Reed)
Typo: Exercise CRS.C20, "clolumn" should be column (Henry Woody)
Typo: Exercise SD.T15, identity matrices have size n, not 3 (Henry Woody)
Typo: Solution SD.T16, added necessary line break (Henry Woody)
Typo: Exercise LT.C42, codomain is complexes, not reals (Daniel York)
Typo: Sage LTS, codomain is C^4, not C^2 (Kelsey Reed)
Typo: Section IVLT, "to to" is just "to" (Molly Hazlehurst)
Typo: Exercise LT.M60, linear transformation is Z, not T (Kelsey Reed)