@@ -107,6 +107,13 @@ Gig Harbor, Washington, USA
 <econtact>www.math.ups.edu/~martinj</econtact>
 </contributorinfo>
 
+<contributorinfo codename="chilijohnson">
+<firstname>Chili</firstname>
+<lastname>Johnson</lastname>
+<location>U. of Puget Sound</location>
+<econtact></econtact>
+</contributorinfo>
+
 <contributorinfo codename="ivankessler">
 <firstname>Ivan</firstname>
 <lastname>Kessler</lastname>
