@@ -2428,6 +2428,16 @@ A\text{ nonsingular}
 </solution>
 </exercise>
 
+<exercise type="T" number="40" rough="isomorphism for vector space of linear transformations">
+<problem contributor="chilijohnson"><acroref type="theorem" acro="VSLT" /> defines the vector space $\vslt{U}{V}$ containing all linear transformations with domain $U$ and codomain $V$.  Suppose $\dimension{U}=n$ and $\dimension{V}=m$.  Prove that $\vslt{U}{V}$ is isomorphic to $M_{mn}$, the vector space of all $m\times n$ matrices (<acroref type="example" acro="VSM" />).  (Hint: we could have suggested this exercise in <acroref type="chapter" acro="LT" />, but have postponed it to this section.  Why?)
+</problem>
+</exercise>
+
+<exercise type="T" number="41" rough="basis for vector space of linear transformations">
+<problem contributor="chilijohnson"><acroref type="theorem" acro="VSLT" /> defines the vector space $\vslt{U}{V}$ containing all linear transformations with domain $U$ and codomain $V$.  Determine a basis for $\vslt{U}{V}$.  (Hint: study <acroref type="exercise" acro="MR.T40" /> first.)
+</problem>
+</exercise>
+
 <exercise type="T" number="60" rough="A, T invertibility equivalence from definitions">
 <problem contributor="robertbeezer">Create an entirely different proof of <acroref type="theorem" acro="IMILT" />  that relies on <acroref type="definition" acro="IVLT" /> to establish the invertibility of $T$, and that relies on <acroref type="definition" acro="MI" /> to establish the invertibility of $A$.
 </problem>
