@@ -2,6 +2,7 @@ v3.xx 2015/xx/xx
 ~~~~~~~~~~~~~~~~
 New: Exercise SSLE.C53, a 2x2 system from The Economist
 New: Exercise O.T31, Gram-Schmidt twice (suggested by Chili Johnson)
+New: Exercises MR.T40, MR.T41, vector space of linear transformations (Chili Johnson)
 Change: Annotated Acronyms, Chapter R, removed three obsolete items
 Change: Exercise PD.M50, deleted, now obsolete
 Edit: Consistent titles on Sage nonsingular matrix series (Daniel York)
